--- a/pages/phase_four.html
+++ b/pages/phase_four.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fase I - Cinemática</title>
-    <link rel="stylesheet" href="../src/css/phase_one.css" />
+    <link rel="stylesheet" href="../src/css/phase_four.css" />
   </head>
 
   <body class="bg-dark text-white">
@@ -462,7 +462,7 @@
     </main>
 
     <!-- Script  -->
-    <script type="module" src="../src/js/phase_one.js"></script>
+    <script type="module" src="../src/js/phase_four.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="../src/js/bootstrap.min.js"></script>
