--- a/pages/phase_four.html
+++ b/pages/phase_four.html
@@ -367,18 +367,16 @@
                   class="form-control me-1"
                   name="logic"
                   rows="1"
-                >
-                </textarea>
-                <button
-                  data-submit-logic
-                  type="button"
-                  class="btn btn-primary"
-                  data-bs-toggle="modal"
-                  data-bs-target="#completeChallenge"
-                  disabled
+                ></textarea>
+
+                <a
+                  id="data-submit-logic"
+                  href="#"
+                  class="btn btn-primary disabled"
+                  download
                 >
                   Enviar
-                </button>
+                </a>
               </div>
             </div>
           </div>
