finalização da phase one

--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -105,18 +105,12 @@
             <div class="modal-body">
               <input type="radio" class="btn-check" id="radio-one" name="option" autocomplete="off" />
               <label class="btn" for="radio-one">
-                <figure class="figure">
-                  <img src="../src/images/velocidade_tempo_2.png" class="figure-img img-fluid rounded img-thumbnail"
-                    alt="Gráfico velocidadeXtempo" />
-                </figure>
+                <h2>A TRAJETÓRIA DE BAIXO REPRESENTA O MOVIMENTO RETILINEO UNIFORME</h2>
               </label>
 
               <input type="radio" class="btn-check" id="radio-two" name="option" autocomplete="off" />
               <label class="btn" for="radio-two">
-                <figure class="figure">
-                  <img src="../src/images/velocidade_tempo.png" class="figure-img img-fluid rounded img-thumbnail"
-                    alt="Gráfico distanciaXtempo" />
-                </figure>
+                <h2>A TRAJETÓRIA DE CIMA REPRESENTA O MOVIMENTO RETILINEO UNIFORMEMENTE VARIADO</h2>
               </label>
             </div>
 
@@ -148,8 +142,7 @@
             </div>
             <div class="modal-footer">
               <button data-next-phase type="button" class="btn btn-secondary" data-bs-toggle="modal"
-                data-bs-target="#nextPhaseModal">
-                Próxima fase
+                data-bs-target="#nextPhaseModal"><a href="./phase_two.html">Próxima fase</a>
               </button>
             </div>
           </div>
