mudança de texto nos modal

--- a/pages/phase_four.html
+++ b/pages/phase_four.html
@@ -263,7 +263,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
+                <h5 class="modal-title" id="modalLabel">Resposta errada</h5>
                 <button
                   type="button"
                   class="btn-close"
