--- a/pages/phase_two.html
+++ b/pages/phase_two.html
@@ -106,7 +106,8 @@
           >
             <div class="modal-content">
               <div class="modal-header">
-                Qual dos gráficos abaixo melhor representa a trajetória do Tatu?
+                Qual dos gráficos abaixo melhor representa a velocidade/tempo do
+                Tatu?
                 <button
                   type="button"
                   class="btn-close"
@@ -126,7 +127,7 @@
                 <label class="btn" for="radio-one">
                   <figure class="figure">
                     <img
-                      src="../src/images/velocidade_tempo_2.png"
+                      src="../src/images/velocidade_tempo.png"
                       class="figure-img img-fluid rounded img-thumbnail"
                       alt="Gráfico velocidadeXtempo"
                     />
@@ -143,7 +144,7 @@
                 <label class="btn" for="radio-two">
                   <figure class="figure">
                     <img
-                      src="../src/images/velocidade_tempo.png"
+                      src="../src/images/posicao_tempo.png"
                       class="figure-img img-fluid rounded img-thumbnail"
                       alt="Gráfico distanciaXtempo"
                     />
@@ -255,7 +256,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
+                <h5 class="modal-title" id="modalLabel">Resposta errado</h5>
                 <button
                   type="button"
                   class="btn-close"
