--- a/pages/phase_three.html
+++ b/pages/phase_three.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fase II - Cinemática</title>
-    <link rel="stylesheet" href="../src/css/phase_two.css" />
+    <title>Fase III - Cinemática</title>
+    <link rel="stylesheet" href="../src/css/phase_three.css" />
     <link rel="stylesheet" href="../src/css/bootstrap.css" />
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
@@ -76,27 +76,27 @@
 
         <div data-armadillo id="armadillo" class="armadillo position-absolute">
           <p data-time-text class="text-center mb-0 fw-bold">t = 0</p>
-          <p class="text-center fw-bold">v = 10m/s</p>
+          <p data-text-postion class="text-center fw-bold">0m</p>
         </div>
 
         <div style="left: 0px" class="armadillo position-absolute">
           <p class="text-center mb-0 fw-bold">t = 0</p>
-          <p class="text-center fw-bold">v = 10m/s</p>
+          <p class="text-center fw-bold">0m</p>
         </div>
 
         <div style="left: 270px" class="armadillo position-absolute d-none">
           <p class="text-center mb-0 fw-bold">t = 1</p>
-          <p class="text-center fw-bold">v = 10m/s</p>
+          <p class="text-center fw-bold">5m</p>
         </div>
 
         <div style="left: 540px" class="armadillo position-absolute d-none">
           <p class="text-center mb-0 fw-bold">t = 2</p>
-          <p class="text-center fw-bold">v = 10m/s</p>
+          <p class="text-center fw-bold">10m</p>
         </div>
 
         <div style="left: 810px" class="armadillo position-absolute d-none">
           <p class="text-center mb-0 fw-bold">t = 3</p>
-          <p class="text-center fw-bold">v = 10m/s</p>
+          <p class="text-center fw-bold">15m</p>
         </div>
 
         <!-- Modal para mostrar a questão -->
@@ -106,8 +106,7 @@
           >
             <div class="modal-content">
               <div class="modal-header">
-                Qual dos gráficos abaixo melhor representa a velocidade/tempo do
-                Tatu?
+                <p>Com base na trajetória do Tatu, qual é a sua velocidade?</p>
                 <button
                   type="button"
                   class="btn-close"
@@ -117,39 +116,35 @@
               </div>
 
               <div class="modal-body">
-                <input
-                  type="radio"
-                  class="btn-check"
-                  id="radio-one"
-                  name="option"
-                  autocomplete="off"
-                />
-                <label class="btn" for="radio-one">
-                  <figure class="figure">
-                    <img
-                      src="../src/images/velocidade_tempo.png"
-                      class="figure-img img-fluid rounded img-thumbnail"
-                      alt="Gráfico velocidadeXtempo"
-                    />
-                  </figure>
-                </label>
+                <div class="form-check">
+                  <input
+                    type="radio"
+                    class="form-check-input"
+                    id="radio-one"
+                    name="option"
+                  />
+                  <label class="form-check-label" for="radio-one">15m/s</label>
+                </div>
 
-                <input
-                  type="radio"
-                  class="btn-check"
-                  id="radio-two"
-                  name="option"
-                  autocomplete="off"
-                />
-                <label class="btn" for="radio-two">
-                  <figure class="figure">
-                    <img
-                      src="../src/images/posicao_tempo.png"
-                      class="figure-img img-fluid rounded img-thumbnail"
-                      alt="Gráfico distanciaXtempo"
-                    />
-                  </figure>
-                </label>
+                <div class="form-check">
+                  <input
+                    type="radio"
+                    class="form-check-input"
+                    id="radio-two"
+                    name="option"
+                  />
+                  <label class="form-check-label" for="radio-two">10m/s</label>
+                </div>
+
+                <div class="form-check">
+                  <input
+                    type="radio"
+                    class="form-check-input"
+                    id="radio-three"
+                    name="option"
+                  />
+                  <label class="form-check-label" for="radio-three">5m/s</label>
+                </div>
               </div>
 
               <div class="modal-footer">
@@ -199,7 +194,7 @@
               </div>
               <div class="modal-footer">
                 <a
-                  href="./phase_three.html"
+                  href="./phase_four.html"
                   role="button"
                   class="btn btn-secondary"
                 >
@@ -233,7 +228,7 @@
               </div>
               <div class="modal-footer">
                 <a
-                  href="./phase_three.html"
+                  href="./phase_four.html"
                   role="button"
                   class="btn btn-secondary"
                 >
@@ -256,7 +251,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="modalLabel">Resposta errado</h5>
+                <h5 class="modal-title" id="modalLabel">Resposta errada</h5>
                 <button
                   type="button"
                   class="btn-close"
@@ -307,7 +302,7 @@
 
               <div class="modal-footer">
                 <a
-                  href="./phase_three.html"
+                  href="./phase_four.html"
                   role="button"
                   class="btn btn-secondary"
                 >
@@ -320,7 +315,7 @@
       </main>
     </section>
 
-    <script type="module" src="../src/js/phase_two.js"></script>
+    <script type="module" src="../src/js/phase_three.js"></script>
     <script src="../src/js/bootstrap.min.js"></script>
   </body>
 </html>
