--- a/pages/phase_two.html
+++ b/pages/phase_two.html
@@ -194,17 +194,25 @@
               </div>
               <div class="modal-body">
                 <p class="textWin">
-                  Parabéns, você ganhou! Siga para o próximo desafio.
+                  Parabéns por completar o desafio! <br />Por favor, nos diga
+                  qual foi a sua lógica para a resolução da questão:
                 </p>
-              </div>
-              <div class="modal-footer">
-                <a
-                  href="./phase_three.html"
-                  role="button"
-                  class="btn btn-secondary"
-                >
-                  Próxima fase
-                </a>
+
+                <div class="form-check">
+                  <textarea
+                    class="form-control mb-1"
+                    name="logic"
+                    rows="4"
+                  ></textarea>
+
+                  <a
+                    id="question-two-logic"
+                    href="./phase_three.html"
+                    class="btn btn-primary disabled"
+                  >
+                    Enviar
+                  </a>
+                </div>
               </div>
             </div>
           </div>
