correção do textarea

--- a/pages/phase_four.html
+++ b/pages/phase_four.html
@@ -229,7 +229,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
+                <h5 class="modal-title" id="modalLabel">Fim do desafio</h5>
               </div>
               <div class="modal-body">
                 <p class="textWin">
@@ -244,7 +244,7 @@
                   data-bs-toggle="modal"
                   data-bs-target="#nextPhaseModal"
                 >
-                  Próxima fase
+                  Próximo desafio
                 </button>
               </div>
             </div>
@@ -309,11 +309,12 @@
                   Parabéns por completar os desafios! <br />Por favor, nos diga
                   qual foi a sua lógica para a resolução das questões:
                 </p>
-                <div class="d-flex flex-row">
+                
+                <div class="form-check">
                   <textarea
-                    class="form-control me-1"
+                    class="form-control mb-1"
                     name="logic"
-                    rows="1"
+                    rows="4"
                   ></textarea>
 
                   <a
