--- a/index.html
+++ b/index.html
@@ -7,62 +7,102 @@
     <title>Ciência e tecnologia - aprenda física jogando!</title>
     <link rel="stylesheet" href="src/css/bootstrap.css" />
   </head>
-  <body class="bg-dark">
-    <section data-inital-screen class="d-block vh-100">
-      <div
-        id="initial-screen"
-        class="d-flex flex-column justify-content-center align-items-center vh-100 p-4"
-      >
-        <p class="text-center fs-4 text-white">
-          <strong>Boas-vindas caro estudante!</strong>
-        </p>
-        <p class="text-center fs-5 text-white">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores modi
-          magni consectetur. Voluptas, architecto in expedita harum ad soluta
-          dignissimos nam commodi perferendis pariatur quam vel aspernatur ut
-          cum omnis. <br />
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores modi
-          magni consectetur. Voluptas, architecto in expedita harum ad soluta
-          dignissimos nam commodi perferendis pariatur quam vel aspernatur ut
-          cum omnis. <br /><br />
-          Antes de comerçar o jogo, informe seu nome
-        </p>
 
-        <div class="d-flex gap-1">
-          <input
-            for="name"
-            type="text"
-            class="form-control"
-            placeholder="Nome"
-            autocomplete="off"
-          />
-          <a
-            data-start-game
-            href="./pages/phase_one.html"
-            role="button"
-            class="btn btn-primary disabled"
-          >
-            Continuar
-          </a>
+  <body class="bg-dark">
+    <section data-inital-screen>
+      <div
+        id="story-slide"
+        class="carousel slide d-flex justify-content-center align-items-center vh-100"
+      >
+        <div class="carousel-inner w-50">
+          <div class="carousel-item active">
+            <p class="text-white">
+              Em um mundo onde a imaginação se mescla com a realidade, um
+              pequeno tatu chamado Tito despertava todas as manhãs com a
+              curiosidade pulsando em seu coraçãozinho. Tito era diferente dos
+              outros tatuzinhos, pois possuía uma paixão especial pela física e
+              por tudo que ela representava. Acreditava que os segredos do
+              universo podiam ser desvendados através das leis que governavam o
+              movimento e a interação entre os corpos.
+            </p>
+          </div>
+
+          <div class="carousel-item">
+            <p class="text-white">
+              Um belo dia, enquanto explorava o vasto jardim próximo à sua toca,
+              Tito encontrou um misterioso pergaminho. Nele, estava escrito
+              sobre uma antiga lenda que dizia que, além da compreensão teórica,
+              a verdadeira aprendizagem da física envolvia desafios práticos e
+              emocionantes. Intrigado e cheio de coragem, Tito decidiu embarcar
+              em uma jornada para explorar esses desafios e, assim, levar a
+              física a todos aqueles que desejavam aprender de forma mais
+              envolvente.
+            </p>
+          </div>
+
+          <div class="carousel-item">
+            <p class="text-white">
+              O primeiro desafio que Tito enfrentaria seria compreender o
+              movimento retilíneo uniforme, uma parte essencial da cinemática.
+              Ele sabia que essa era a base para entender como os objetos se
+              moviam em linha reta, com velocidade constante.
+            </p>
+          </div>
+
+          <div class="carousel-item">
+            <div class="mb-1">
+              <p class="text-white">
+                Agora é a sua vez de agir! Embarque nessa jornada com Tito e o
+                ajude em seus desafios na busca de desvendar os segredos do
+                Movimento Retilíneo e Uniforme.
+              </p>
+
+              <label class="form-label text-white"
+                >Antes de prosseguir para o jogo, por favo insira seu nome:
+              </label>
+              <input
+                for="name"
+                type="text"
+                class="form-control"
+                placeholder="Nome"
+                autocomplete="off"
+              />
+            </div>
+
+            <a
+              data-start-game
+              href="./pages/phase_one.html"
+              role="button"
+              class="btn btn-primary disabled"
+            >
+              Continuar
+            </a>
+          </div>
         </div>
+
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#story-slide"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#story-slide"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </section>
 
-    <script>
-      const nameInput = document.querySelector("input[for=name]");
-      const startGameButton = document.querySelector("[data-start-game]");
-
-      nameInput.addEventListener("input", (e) => {
-        if (e.target.value != "") {
-          startGameButton.classList.remove("disabled");
-        } else {
-          startGameButton.classList.add("disabled");
-        }
-      });
-
-      startGameButton.addEventListener("click", () => {
-        localStorage.setItem("nome", nameInput.value);
-      });
-    </script>
+    <script src="./src/js/index.js"></script>
+    <script src="./src/js/bootstrap.min.js"></script>
   </body>
 </html>
