--- a/pages/phase_four.html
+++ b/pages/phase_four.html
@@ -75,7 +75,7 @@
           </button>
         </div>
 
-        <!-- Cverlay para mostrar a pergunta-->
+        <!-- Overlay para mostrar a pergunta-->
         <div data-question class="d-none bg-dark w-75 p-4 mx-auto">
           <p class="text-center fs-5">
             Um tatu está fugindo de uma raposa e, para se salvar, ele precisa
@@ -143,18 +143,7 @@
               <label for="radio4"></label>
             </div>
 
-            <div class="form-check">
-              <input
-                role="button"
-                type="radio"
-                name="velocity"
-                class="form-check-input"
-                id="radio5"
-              />
-              <label for="radio5"></label>
-            </div>
-
-            <button data-confirm-answer class="btn btn-info" disabled>
+            <button data-confirm-answer class="btn btn-success" disabled>
               Confirmar
             </button>
           </div>
