width e height menores

--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -131,7 +131,7 @@
 
         <!-- Modal para mostrar a questão -->
         <div data-question id="question" class="modal fade">
-          <div class="modal-dialog modal-lg modal-dialog-scrollable">
+          <div class="modal-dialog modal-sm modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
                 Como base no percurso dos dois Tatu é possível concluir que a
@@ -175,7 +175,7 @@
                 <button
                   data-submit-answer
                   type="button"
-                  class="btn btn-success"
+                  class="btn btn-success btn-sm"
                   data-bs-dismiss="modal"
                   disabled
                 >
@@ -184,7 +184,7 @@
 
                 <button
                   type="button"
-                  class="btn btn-danger"
+                  class="btn btn-danger btn-sm"
                   data-bs-dismiss="modal"
                   aria-label="Fechar"
                 >
